--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -18,3 +18,34 @@
   padding: 0;
   font-family: poppins, sans-serif;
 }
+
+.cart {
+
+  $cart-text-bgcolor: #f00;
+  $cart-text-color: #fff;
+
+  position: relative;
+  border-radius: 5px;
+  padding: 2px;
+
+  .cart-image {
+    width: 26px;
+    height: 26px;
+  }
+
+  .cart-text {
+    display: block;
+    width: 15px;
+    height: 15px;
+    background: $cart-text-bgcolor;
+    color: $cart-text-color;
+    border-radius: 50%;
+    font-size: 0.7rem;
+    position: absolute;
+    top: -5px;
+    right: -5px;
+  }
+
+}
+
+.d-none { display: none; }
