--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -7,6 +7,8 @@
 
 /* End Tailwind CSS */
 
+@import "colors";
+
 @font-face {
   font-family: 'poppins';
   src: url("../assets/fonts/poppins/Poppins-Regular.ttf") format('truetype');
