Refactoring du code

--- a/src/scss/_inputs.scss
+++ b/src/scss/_inputs.scss
@@ -9,6 +9,11 @@
   background-color: $successInputBgColor;
 }
 
+.input-disabled {
+  background-color: #9ca3af;
+  color: #fff;
+}
+
 .error { color: $errorColor; }
 
 .bg-error { background-color: $errorColor; }
