Implementation des vues ResetPassword et ForgotPassword pour la recuperation de mot de passe

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -21,6 +21,10 @@ $successInputBgColor: rgba(212, 246, 197, 0.54);
   background-color: $primaryColor;
 }
 
+.bg-primary {
+  background-color: $primaryColor;
+}
+
 .text-secondary {
   color: $secondaryColor;
 }
