--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -11,6 +11,22 @@
 @import "inputs";
 @import "sidebar";
 
+
+@layer base {
+
+  h2 { 
+    @apply text-2xl font-bold; 
+  }
+
+  h3{
+    @apply text-xl font-semibold; 
+  }
+
+  .form-wrapper {
+    @apply flex flex-col min-h-screen justify-center items-center gap-3;
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
