Ajout de la fonctionalite de suppression et d'ajout de produit par les restaurants

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -2,6 +2,7 @@
 :root {
   --primary-color: rgb(87, 232, 26);;
   --secondary-color: rgb(17, 24, 39);
+  --danger-color: #ff0000;
 }
 
 $primaryColor: var(--primary-color);
