--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -8,10 +8,10 @@
 $primaryColor: var(--primary-color);
 $secondaryColor: var(--secondary-color);
 
-$errorColor: #ff0000;
+$errorColor: var(--danger-color);
 $errorInputBgColor: rgba(252, 220, 220, 0.54);
 
-$successColor: rgb(87, 232, 26);
+$successColor: $primaryColor;
 $successInputBgColor: rgba(212, 246, 197, 0.54);
 
 .text-green {
